--- a/style.css
+++ b/style.css
@@ -21,17 +21,20 @@ nav {
 section {
     background: #ebebeb;
     width: 495px;
+    float: left;
 }
 
 aside {
     background: #ebebeb;
     width: 495px;
+    float: left;
 }
 
 footer {
     background: #ebebeb;
     margin-right: auto;
     margin-left: auto;
+    clear: left;
 }
 
 article {
@@ -42,5 +45,6 @@ article {
 h1, p {
     color: #777;
     background: #ebebeb;
+    text-align: center;
 }
 
